--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,3 +1,7 @@
 @import 'tailwindcss/base';
 @import 'tailwindcss/components';
 @import 'tailwindcss/utilities';
+
+#searchInput {
+    box-shadow: 0 0 0 0;
+}
